--- a/partials/preface.tex
+++ b/partials/preface.tex
@@ -1,2 +1,11 @@
 \chapter*{Preface}
-TODO
+
+Thanks to all the students that showed me there is always room for improvement.
+
+In this 'thesis' I wrote down some of my annoyances in reading students work.
+
+In several spots in this thesis I write 'I' or 'we', which is bad style in a normal thesis.
+However, because I consider me, myself and my fellow teachers main stakeholders in all of your writing, I allow myself to do that here. \textit{Do not do that at home} (for your own thesis that is).
+
+Pieter van den Hombergh,\\
+Venlo 2024-04-26
