--- a/partials/summary_en.tex
+++ b/partials/summary_en.tex
@@ -1,2 +1,19 @@
 \chapter*{Summary}
-TODO
+\addcontentsline{toc}{chapter}{Summary}
+% No generated number
+% add name to toc
+I will not bore you with a summary. That would spoil the fun.
+
+\textit{Summaries are overrated.}
+
+\section*{TLDR;}
+\addcontentsline{toc}{section}{TLDR;}
+
+If that is not short enough:
+\begin{Description}
+\item[For the wordies] If you prefer word or some other ``word processor'', read
+the improvement suggestions in \vref{sec:pdffromuml} and \vref{sec:stylish}.
+\item [For all] Things to avoid when including code see \vref{chap:listings} and forget the rest. That to the wordies too.
+\end{Description}
+
+
