--- a/references.bib
+++ b/references.bib
@@ -1,25 +1,128 @@
 @misc{google,
-	title={Google},
-	url={https://google.com},
-	journal={google.com},
-	author={Oogle, Gregor},
-	year={2018},
-	urldate = {2018-10-08}
+    title={Google},
+    sortname={google},
+    shorthand={Google},
+    url={https://google.com},
+    journal={google.com},
+    author={Oogle, Gregor},
+    year={2018},
+    urldate = {2018-10-08}
 }
 @book{goetz2006java,
-	title={Java concurrency in practice},
-	author={Goetz, Brian and Peierls, Tim},
-	year={2006},
-	publisher={Pearson Education}
+    title={Java concurrency in practice},
+    shorthand={JCIP},
+    sortname={jcip},
+    author={Goetz, Brian and Peierls, Tim},
+    year={2006},
+    publisher={Pearson Education}
 }
 
 @article{cattell2011scalable,
-	title={Scalable SQL and NoSQL data stores},
-	author={Cattell, Rick},
-	journal={Acm Sigmod Record},
-	volume={39},
-	number={4},
-	pages={12--27},
-	year={2011},
-	publisher={ACM}
+    title={Scalable SQL and NoSQL data stores},
+    shorthand={Scalabel SQL},
+    sortname={Scalabel SQL},
+    author={Cattell, Rick},
+    journal={Acm Sigmod Record},
+    volume={39},
+    number={4},
+    pages={12--27},
+    year={2011},
+    publisher={ACM}
+}
+
+@BOOK{texbook,
+   author = "Donald E. Knuth",
+   shorthand={\TeX{}book, 1984},
+   sortname={texbook},
+   title= "The {{\TeX}book}",
+   publisher = "Addison-Wesley",
+   year = 1984
+}
+
+@BOOK{latexbook,
+   author = "Leslie Lamport",
+   shorthand={Lamport, 1986},
+   sortname={lamport},
+   title = "{\LaTeX \rm:} {A} Document Preparation System",
+   publisher = "Addison-Wesley",
+   year = 1986
+}
+
+@BOOK{latexcompanion,
+   author = "Frank Mittelbach and Michel Goossens",
+   shorthand={Companion, 2004},
+   sortname={companion},
+   title = "The {\LaTeX }Companion Second Edition",
+   publisher = "Addison-Wesley",
+   year = 2004
+}
+
+@misc{WikiBooks:2011:LaTeX,
+   title = {LaTeX - Wikibooks, open books for an open world},
+   shorthand={\LaTeX\ Wiki, 2024},
+   sortname={wiki latex},
+   month = 9,
+   year = {2011},
+   url = {http://en.wikibooks.org/wiki/LaTeX}
+}
+
+@misc{bibtexsite,
+  author={bibtex},
+  shorthand={BibTex project, 2024},
+  sortname={bibtex},
+  year={2014},
+  title={Home page BibTeX project},
+  howpublished={web},
+  url={http://www.bibtex.org/Using/}
+}
+@misc{biblatexsite,
+  author={biblatex},
+  shorthand={BibLaTex project, 2024},
+  sortname={bibtex},
+  year={2014},
+  title={CTAN BibLaTeX site},
+  howpublished={web},
+  url={https://ctan.org/pkg/biblatex}
+}
+
+@misc{ Nobody06,
+   author = "Nobody Jr",
+   shorthand={Nobody},
+   sortname={nobody},
+   title = "My Article",
+   year = "2006"
+}
+
+@ONLINE{WikiBooks:2024:LaTeX,
+   label = {latex wikibook},
+   shorthand={\LaTeX\ Wiki, 2024},
+   sortname={wiki latex},
+   author = {Various Authors},
+   publisher={WikiBooks},
+   title = {LaTeX - Wikibooks, open books for an open world},
+   month = 5,
+   year = {2024},
+   url = {http://en.wikibooks.org/wiki/LaTeX}
+}
+
+@book{gamma1994design,
+	added-at = {2010-06-05T16:40:25.000+0200},
+	asin = {0201633612},
+	sortname={GoF},
+	shorthand={GoF 1994},
+	author = {Gamma, Erich and Helm, Richard and Johnson, Ralph and Vlissides, John M.},
+	biburl = {https://www.bibsonomy.org/bibtex/27e3f1154ab1fbce54752a46dba7f2217/pnk},
+	description = {Amazon.com: Design Patterns: Elements of Reusable Object-Oriented Software (9780201633610): Erich Gamma, Richard Helm, Ralph Johnson, John M. Vlissides: Books},
+	dewey = {005.12},
+	ean = {9780201633610},
+	edition = 1,
+	interhash = {7fe32957be97afaf4ecb38b5490d23b4},
+	intrahash = {7e3f1154ab1fbce54752a46dba7f2217},
+	isbn = {0201633612},
+	keywords = {DBIS Design Object-Oriented Patterns SS2010 Seminar Software},
+	publisher = {Addison-Wesley Professional},
+	timestamp = {2010-06-05T16:40:25.000+0200},
+	title = {Design Patterns: Elements of Reusable Object-Oriented Software},
+	url = {http://www.amazon.com/Design-Patterns-Elements-Reusable-Object-Oriented/dp/0201633612/ref=ntt_at_ep_dpi_1},
+	year = 1994
 }
